--- a/config
+++ b/config
@@ -1,7 +1,7 @@
 # don't use sections so that we can load this with python or bash
 
 # assign any value to not use azure batch even if configuration is set
-FORCE_LOCAL_TASKS=
+FORCE_LOCAL_TASKS=1
 FORCE_BATCH_TASKS=
 
 # assign any value to make cronjob for update work
