--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       tags:
         - tbd_gis:${VERSION}
     volumes:
+      - /etc/ssl/certs:/etc/ssl/certs
       - type: bind
         source: ./config
         target: /appl/config
@@ -34,6 +35,7 @@ services:
     security_opt:
       - seccomp:unconfined
     volumes:
+      - /etc/ssl/certs:/etc/ssl/certs
       - type: bind
         source: ./config
         target: /appl/config
@@ -62,6 +64,7 @@ services:
     security_opt:
       - seccomp:unconfined
     volumes:
+      - /etc/ssl/certs:/etc/ssl/certs
       - type: bind
         source: ./config
         target: /appl/config
@@ -89,6 +92,7 @@ services:
       tags:
         - tbd_prod_stable:${VERSION}
     volumes:
+      - /etc/ssl/certs:/etc/ssl/certs
       - data:/appl/data
     env_file:
       - .env
@@ -107,6 +111,7 @@ services:
       tags:
         - tbd_prod_svc:${VERSION}
     volumes:
+      - /etc/ssl/certs:/etc/ssl/certs
       - data:/appl/data
     env_file:
       - .env
