cleaned up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,11 @@
-.vscode
+.*
+**/log*.txt
 *.pyc
-**/data
-documentation/*.tag
-documentation/dia
-documentation/doxygen
-documentation/Graphviz
-documentation/html
-.idea
-100m
-log*.txt
-pyfire/venv
 *.whl
+**/build
+**/data
 **/dist
 **/logs
-**/build
 **/private
 **/output*
-tbd/validate
-tbd/dir_test
-test
+**/.venv
