--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -33,7 +33,7 @@ RUN apt-get install -y locales \
   && locale-gen
 RUN apt-get install -y gdb valgrind time nano ministat \
   libdwarf-dev libelf-dev libdw-dev linux-perf clang-format \
-  p7zip-full
+  p7zip-full rsync
 ARG USER_ID
 RUN groupadd --gid ${USER_ID} ${USERNAME} \
   && useradd --uid ${USER_ID} --gid ${USER_ID} -m ${USERNAME} \
