add config option for how many things to keep unarchived

--- a/config
+++ b/config
@@ -7,6 +7,9 @@ FORCE_BATCH_TASKS=
 # assign any value to make cronjob for update work
 CRONJOB_RUN=
 
+# how many runs to keep unarchived
+KEEP_UNARCHIVED=5
+
 # minimum latitude for area bounding box
 BOUNDS_LATITUDE_MIN=41
 
