split into sims and runs directories so only simulation files required for tbd can be in sims

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
         source: ./config
         target: /appl/config
       - data:/appl/data
+      - sims:/appl/data/sims
       - type: bind
         source: ./gis
         target: /appl/gis
@@ -45,6 +46,7 @@ services:
         source: ./config
         target: /appl/config
       - data:/appl/data
+      - sims:/appl/data/sims
       - type: bind
         source: ./tbd
         target: /appl/tbd
@@ -74,6 +76,7 @@ services:
         source: ./config
         target: /appl/config
       - data:/appl/data
+      - sims:/appl/data/sims
       - type: bind
         source: ./tbd
         target: /appl/tbd
@@ -99,6 +102,7 @@ services:
     volumes:
       - /etc/ssl/certs:/etc/ssl/certs
       - data:/appl/data
+      - sims:/appl/data/sims
     env_file:
       - .env
 
@@ -118,6 +122,7 @@ services:
     volumes:
       - /etc/ssl/certs:/etc/ssl/certs
       - data:/appl/data
+      - sims:/appl/data/sims
     env_file:
       - .env
     restart: always
@@ -140,6 +145,7 @@ services:
         source: ./tbd/settings.ini
         target: /appl/tbd/settings.ini
       - data:/appl/data
+      - sims:/appl/data/sims
     env_file:
       - .env
 
@@ -151,3 +157,10 @@ volumes:
       type: none
       o: bind
       device: ./data
+  sims:
+    # symlink to your actual directory if you don't want it in the project folder
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ./sims
