--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -40,8 +40,9 @@ RUN groupadd --gid ${USER_ID} ${USERNAME} \
   && chsh --shell /bin/bash ${USERNAME} \
   && echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} \
   && chmod 0440 /etc/sudoers.d/${USERNAME}
+# HACK: make sure python folder doesn't break if version changes
 RUN chown -R ${USERNAME}:${USERNAME} /appl/.venv \
-  && echo /appl/tbd/src/py/firestarr > /appl/.venv/lib/python3.11/site-packages/firestarr.pth \
+  && echo /appl/tbd/src/py/firestarr > /appl/.venv/lib/`ls -1 /appl/.venv/lib/ | grep python`/site-packages/firestarr.pth \
   && echo source /appl/.venv/bin/activate >> /home/${USERNAME}/.bashrc \
   && echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc \
   && echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
@@ -109,7 +110,7 @@ USER ${USERNAME}
 FROM minimal-with-user AS py_gdal
 RUN apt-get install -y --no-install-recommends \
   cron curl nano procps psmisc tar util-linux unzip wget zip \
-  python3-pip libgdal-dev libgeotiff5 python3-numpy python3-gdal \
+  python3-pip libgdal-dev libgeotiff5 python3-numpy python3-gdal python3-venv \
   ministat sysstat rsync screen p7zip-full \
   && update-alternatives --install /usr/bin/python python /usr/bin/python3 10 \
   && apt-get clean \
@@ -125,8 +126,17 @@ RUN echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc \
   && echo cd /appl/tbd >> /home/${USERNAME}/.bashrc \
   && echo /appl/tbd/src/py/firestarr > /usr/lib/python3/dist-packages//firestarr.pth
 WORKDIR /appl/
-COPY .docker/requirements_tbd.txt .
-RUN python -m pip install --no-warn-script-location --break-system-packages -r /appl/requirements_tbd.txt
+# not using venv on prod is causing problems so just be consistent
+COPY .docker/requirements_tbd.txt /appl/requirements_tbd.txt
+RUN python -m venv /appl/.venv \
+  && . /appl/.venv/bin/activate \
+  && python -m pip install -r /appl/requirements_tbd.txt
+# HACK: make sure python folder doesn't break if version changes
+RUN chown -R ${USERNAME}:${USERNAME} /appl/.venv \
+  && echo /appl/tbd/src/py/firestarr > /appl/.venv/lib/`ls -1 /appl/.venv/lib/ | grep python`/site-packages/firestarr.pth \
+  && echo source /appl/.venv/bin/activate >> /home/${USERNAME}/.bashrc \
+  && echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc \
+  && echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
 WORKDIR /appl/tbd
 COPY --from=tbd_build /appl/tbd/tbd /appl/tbd/
 COPY ./tbd/fuel.lut /appl/tbd/
@@ -137,7 +147,6 @@ COPY ./tbd/bounds.geojson /appl/tbd/
 COPY ./tbd/fuel.lut /appl/tbd/
 COPY ./tbd/settings.ini /appl/tbd/
 COPY ./tbd/scripts /appl/tbd/scripts/
-RUN sed -i "/source \/appl\/.venv\/bin\/activate/d" /appl/tbd/scripts/update.sh
 COPY ./tbd/src/py/firestarr /appl/tbd/src/py/firestarr/
 WORKDIR /appl/tbd/src/py/cffdrs-ng
 COPY ./tbd/src/py/cffdrs-ng/NG_FWI.py .
