use parallel xargs for merging folders

--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -31,7 +31,7 @@ ARG VERSION
 RUN apt-get install -y locales \
   && sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen \
   && locale-gen
-RUN apt-get install -y gdb valgrind time nano ministat \
+RUN apt-get install -y gdb valgrind time nano bc ministat \
   libdwarf-dev libelf-dev libdw-dev linux-perf clang-format \
   p7zip-full rsync
 ARG USER_ID
@@ -111,7 +111,7 @@ FROM minimal-with-user AS py_gdal
 RUN apt-get install -y --no-install-recommends \
   cron curl nano procps psmisc tar util-linux unzip wget zip \
   python3-pip libgdal-dev libgeotiff5 python3-numpy python3-gdal python3-venv \
-  ministat sysstat rsync screen p7zip-full \
+  bc ministat sysstat rsync screen p7zip-full \
   && update-alternatives --install /usr/bin/python python /usr/bin/python3 10 \
   && apt-get clean \
   && rm -rf \
