--- a/.github/workflows/build_test_publish.yml
+++ b/.github/workflows/build_test_publish.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Test FireSTARR
         run: |
-          docker compose run firestarr /appl/tbd/tbd test dir_test 12
+          docker compose run firestarr /appl/tbd/tbd test dir_test --hours 12
 
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
