--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -10,18 +10,22 @@ RUN apt-get install -y sudo \
   && useradd --uid ${USER_ID} --gid ${USER_ID} -m ${USERNAME} \
   && chsh --shell /bin/bash ${USERNAME} \
   && echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} \
-  && chmod 0440 /etc/sudoers.d/${USERNAME}
+  && chmod 0440 /etc/sudoers.d/${USERNAME} \
+  && echo export TMPDIR=/appl/data/tmp >> /home/${USERNAME}/.bashrc
+WORKDIR /appl
+RUN chown -R ${USERNAME}:${USERNAME} /appl
+
 
 FROM minimal-with-user AS minimal-with-libs
 RUN apt-get install -y --no-install-recommends \
   libgeotiff5
 
-# easier to reuse python than do it twice?
 
 FROM minimal-with-libs AS gcc-cmake-with_libs
 RUN apt-get install -y --no-install-recommends \
   libtiff-dev libgeotiff-dev \
   cmake gcc g++ make
+
 
 FROM gcc-cmake-with_libs AS tbd_build
 ARG VERSION
@@ -32,116 +36,114 @@ RUN echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc \
   && cmake -S . -B /appl/tbd/build -D CMAKE_BUILD_TYPE=Release \
   && cmake --build /appl/tbd/build --config Release --target all -j $(nproc)
 
+
 FROM minimal-with-libs AS firestarr-base
 ARG USERNAME
 ARG VERSION
-RUN apt-get clean \
-  && rm -rf \
-  /var/lib/apt/lists/* \
-  /usr/share/man/*
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 WORKDIR /appl/tbd
-RUN echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc \
-  && echo export TMPDIR=/appl/data/tmp >> /home/${USERNAME}/.bashrc \
-  && echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
-COPY --from=tbd_build /appl/tbd/tbd /appl/tbd/
+USER ${USERNAME}
+RUN echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
 COPY ./tbd/fuel.lut /appl/tbd/
 COPY ./tbd/settings.ini /appl/tbd/
-RUN chown -R ${USERNAME}:${USERNAME} /appl
-RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-USER ${USERNAME}
+COPY --from=tbd_build /appl/tbd/tbd /appl/tbd/
+RUN echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc
 
+# make image with only final layer
 FROM scratch AS firestarr
 ARG USERNAME
 COPY --from=firestarr-base / /
 USER ${USERNAME}
 
-# FROM minimal-with-libs AS py_gdal
-# RUN apt-get install -y --no-install-recommends \
-#   python3-pip python3-numpy python3-gdal python3-venv \
-#   && update-alternatives --install /usr/bin/python python /usr/bin/python3 10
 
+# saves more work to reuse python than it does to reuse gcc
 FROM minimal-with-libs AS py_gdal
 ARG USERNAME
-ARG USER_ID
 RUN apt-get install -y --no-install-recommends \
   cron curl nano procps psmisc tar util-linux unzip wget zip p7zip-full rsync \
   time nano bc ministat sysstat screen
+# ensure that gdal can be imported at end
 RUN apt-get install -y --no-install-recommends \
-  python3 gdal-bin python3-gdal python3-setuptools \
+  python3 gdal-bin python3-gdal python3-setuptools python3-pip python3-venv \
   && update-alternatives --install /usr/bin/python python /usr/bin/python3 10 \
   && python -c "from osgeo import gdal"
-RUN apt-get install -y --no-install-recommends \
-  python3-pip python3-venv
 WORKDIR /appl/tbd/
+# RUN chown -R ${USERNAME}:${USERNAME} /appl
+# if we make venv with with user then permissions should be correct
+USER ${USERNAME}
 # HACK: make sure python folder doesn't break if version changes
 # ensure that gdal can be imported at end
 RUN python -m venv --system-site-packages /appl/.venv \
   && echo /appl/tbd/src/py/firestarr > /appl/.venv/lib/`ls -1 /appl/.venv/lib/ | grep python`/site-packages/firestarr.pth \
   && . /appl/.venv/bin/activate \
-  && python -c "from osgeo import gdal"
-RUN chown -R ${USERNAME}:${USERNAME} /appl/.venv \
-  && echo export TMPDIR=/appl/data/tmp >> /home/${USERNAME}/.bashrc \
-  && echo source /appl/.venv/bin/activate >> /home/${USERNAME}/.bashrc \
-  && echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
-RUN chown -R ${USERNAME}:${USERNAME} /appl
+  && python -c "from osgeo import gdal" \
+  && echo source /appl/.venv/bin/activate >> /home/${USERNAME}/.bashrc
+
 
 FROM py_gdal AS tbd_base
 ARG USERNAME
-ARG VERSION
-ARG USER_ID
-COPY .docker/requirements_tbd.txt /appl/requirements_tbd.txt
 WORKDIR /appl/tbd/
+# if we make venv with with user then permissions should be correct
+USER ${USERNAME}
+RUN echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
+COPY .docker/requirements_tbd.txt /appl/requirements_tbd.txt
 # HACK: make sure osgeo/gdal is available before & after installing requirements
 RUN python -c "from osgeo import gdal" \
   && . /appl/.venv/bin/activate \
   && python -c "from osgeo import gdal" \
   && python -m pip install -r /appl/requirements_tbd.txt \
   && python -c "from osgeo import gdal"
-RUN  echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc
-RUN chown -R ${USERNAME}:${USERNAME} /appl
 
-FROM tbd_base AS tbd_dev
+
+FROM tbd_base AS tbd_gcc
 ARG USERNAME
-ARG VERSION
-ARG USER_ID
+USER root
 RUN apt-get install -y --no-install-recommends \
   libtiff-dev libgeotiff-dev \
   gdb valgrind libdwarf-dev libelf-dev libdw-dev linux-perf clang-format \
   cmake gcc g++ make
 USER ${USERNAME}
 
-FROM tbd_dev AS tbd_dev_svc
+
+FROM tbd_gcc AS tbd_dev
 ARG USERNAME
 ARG VERSION
-ARG USER_ID
+WORKDIR /appl/tbd/
+RUN echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc
+
+
+FROM tbd_dev AS tbd_dev_svc
+ARG USERNAME
 # run as root so we can redirect to where docker logs will show progress
 COPY .docker/crontab /etc/crontab
 USER ${USERNAME}
 SHELL ["/bin/bash"]
 ENTRYPOINT ["sudo", "cron", "-f"]
 
+
 FROM tbd_dev AS gis
-ARG VERSION
 ARG USERNAME
-ARG USER_ID
+USER ${USERNAME}
 WORKDIR /appl/gis/
 RUN echo cd /appl/gis >> /home/${USERNAME}/.bashrc
-USER ${USERNAME}
 SHELL ["/bin/bash"]
 ENTRYPOINT ["tail", "-f", "/dev/null"]
 
-FROM tbd_base AS tbd_prod
+
+FROM tbd_base AS tbd_prod_base
+ARG USERNAME
+USER root
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+USER ${USERNAME}
+
+FROM tbd_prod_base AS tbd_prod
 ARG USERNAME
 ARG VERSION
-RUN apt-get clean \
-  && rm -rf \
-  /var/lib/apt/lists/* \
-  /usr/share/man/*
 WORKDIR /appl/tbd
+USER ${USERNAME}
 COPY --from=tbd_build /appl/tbd/tbd /appl/tbd/
 COPY ./tbd/fuel.lut /appl/tbd/
 COPY ./config /appl/
-WORKDIR /appl/tbd/
 COPY --from=tbd_build /appl/tbd/tbd .
 COPY ./tbd/bounds.geojson /appl/tbd/
 COPY ./tbd/fuel.lut /appl/tbd/
@@ -152,8 +154,7 @@ WORKDIR /appl/tbd/src/py/cffdrs-ng
 COPY ./tbd/src/py/cffdrs-ng/NG_FWI.py .
 COPY ./tbd/src/py/cffdrs-ng/old_cffdrs.py .
 COPY ./tbd/src/py/cffdrs-ng/util.py .
-RUN chown -R ${USERNAME}:${USERNAME} /appl
-USER ${USERNAME}
+RUN echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc
 SHELL ["/bin/bash"]
 
 FROM scratch AS tbd_prod_stable
