--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -11,9 +11,9 @@ RUN apt-get install -y sudo \
   && chsh --shell /bin/bash ${USERNAME} \
   && echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} \
   && chmod 0440 /etc/sudoers.d/${USERNAME} \
-  && echo export TMPDIR=/appl/data/tmp >> /home/${USERNAME}/.bashrc
-WORKDIR /appl
-RUN chown -R ${USERNAME}:${USERNAME} /appl
+  && echo export TMPDIR=/appl/data/tmp >> /home/${USERNAME}/.bashrc \
+  && mkdir -p /appl/tbd \
+  && chown -R ${USERNAME}:${USERNAME} /appl
 
 
 FROM minimal-with-user AS minimal-with-libs
@@ -28,10 +28,12 @@ RUN apt-get install -y --no-install-recommends \
 
 
 FROM gcc-cmake-with_libs AS tbd_build
+ARG USERNAME
 ARG VERSION
 WORKDIR /appl/tbd
-COPY ./tbd/src/cpp src/cpp/
-COPY ./tbd/CMakeLists.txt .
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/src/cpp src/cpp/
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/CMakeLists.txt .
+USER ${USERNAME}
 RUN echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc \
   && cmake -S . -B /appl/tbd/build -D CMAKE_BUILD_TYPE=Release \
   && cmake --build /appl/tbd/build --config Release --target all -j $(nproc)
@@ -40,14 +42,16 @@ RUN echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc \
 FROM minimal-with-libs AS firestarr-base
 ARG USERNAME
 ARG VERSION
+USER root
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 WORKDIR /appl/tbd
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/fuel.lut /appl/tbd/
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/settings.ini /appl/tbd/
+COPY --chown=${USERNAME}:${USERNAME} --from=tbd_build /appl/tbd/tbd /appl/tbd/
 USER ${USERNAME}
 RUN echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
-COPY ./tbd/fuel.lut /appl/tbd/
-COPY ./tbd/settings.ini /appl/tbd/
-COPY --from=tbd_build /appl/tbd/tbd /appl/tbd/
 RUN echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc
+
 
 # make image with only final layer
 FROM scratch AS firestarr
@@ -59,6 +63,7 @@ USER ${USERNAME}
 # saves more work to reuse python than it does to reuse gcc
 FROM minimal-with-libs AS py_gdal
 ARG USERNAME
+USER root
 RUN apt-get install -y --no-install-recommends \
   cron curl nano procps psmisc tar util-linux unzip wget zip p7zip-full rsync \
   time nano bc ministat sysstat screen
@@ -67,10 +72,9 @@ RUN apt-get install -y --no-install-recommends \
   python3 gdal-bin python3-gdal python3-setuptools python3-pip python3-venv \
   && update-alternatives --install /usr/bin/python python /usr/bin/python3 10 \
   && python -c "from osgeo import gdal"
-WORKDIR /appl/tbd/
-# RUN chown -R ${USERNAME}:${USERNAME} /appl
-# if we make venv with with user then permissions should be correct
 USER ${USERNAME}
+WORKDIR /appl/tbd/
+# if we make venv with with user then permissions should be correct
 # HACK: make sure python folder doesn't break if version changes
 # ensure that gdal can be imported at end
 RUN python -m venv --system-site-packages /appl/.venv \
@@ -84,9 +88,9 @@ FROM py_gdal AS tbd_base
 ARG USERNAME
 WORKDIR /appl/tbd/
 # if we make venv with with user then permissions should be correct
+COPY --chown=${USERNAME}:${USERNAME} .docker/requirements_tbd.txt /appl/requirements_tbd.txt
 USER ${USERNAME}
 RUN echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
-COPY .docker/requirements_tbd.txt /appl/requirements_tbd.txt
 # HACK: make sure osgeo/gdal is available before & after installing requirements
 RUN python -c "from osgeo import gdal" \
   && . /appl/.venv/bin/activate \
@@ -140,20 +144,18 @@ FROM tbd_prod_base AS tbd_prod
 ARG USERNAME
 ARG VERSION
 WORKDIR /appl/tbd
-USER ${USERNAME}
-COPY --from=tbd_build /appl/tbd/tbd /appl/tbd/
-COPY ./tbd/fuel.lut /appl/tbd/
-COPY ./config /appl/
-COPY --from=tbd_build /appl/tbd/tbd .
-COPY ./tbd/bounds.geojson /appl/tbd/
-COPY ./tbd/fuel.lut /appl/tbd/
-COPY ./tbd/settings.ini /appl/tbd/
-COPY ./tbd/scripts /appl/tbd/scripts/
-COPY ./tbd/src/py/firestarr /appl/tbd/src/py/firestarr/
+COPY --chown=${USERNAME}:${USERNAME} ./config /appl/
+COPY --chown=${USERNAME}:${USERNAME} --from=tbd_build /appl/tbd/tbd .
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/bounds.geojson /appl/tbd/
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/fuel.lut /appl/tbd/
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/settings.ini /appl/tbd/
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/scripts /appl/tbd/scripts/
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/src/py/firestarr /appl/tbd/src/py/firestarr/
 WORKDIR /appl/tbd/src/py/cffdrs-ng
-COPY ./tbd/src/py/cffdrs-ng/NG_FWI.py .
-COPY ./tbd/src/py/cffdrs-ng/old_cffdrs.py .
-COPY ./tbd/src/py/cffdrs-ng/util.py .
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/src/py/cffdrs-ng/NG_FWI.py .
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/src/py/cffdrs-ng/old_cffdrs.py .
+COPY --chown=${USERNAME}:${USERNAME} ./tbd/src/py/cffdrs-ng/util.py .
+USER ${USERNAME}
 RUN echo export VERSION=${VERSION} >> /home/${USERNAME}/.bashrc
 SHELL ["/bin/bash"]
 
