downgrade to debian-bookworm & c++20 since trixie update to python 3.13 breaks scripts

--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -1,4 +1,4 @@
-FROM debian:trixie-slim AS minimal-with-user
+FROM debian:bookworm-slim AS minimal-with-user
 ARG USERNAME
 ARG USER_ID
 RUN apt-get update --fix-missing \
